--- a/Jellyfin.Plugin.JellyfinEnhanced/js/locales/en.json
+++ b/Jellyfin.Plugin.JellyfinEnhanced/js/locales/en.json
@@ -72,7 +72,7 @@
     "panel_settings_subtitles_size": "Size",
     "panel_settings_subtitles_font": "Font",
     "panel_settings_disable_custom_styles": "Disable Custom Styles",
-    "panel_settings_disable_custom_styles_desc": "Use Jellyfin's default subtitle styles",
+    "panel_settings_disable_custom_styles_desc": "Use Netflixs default subtitle styles",
     "panel_settings_random_button": "Random Button Settings",
     "panel_settings_random_button_enable": "Enable Random Button",
     "panel_settings_random_button_enable_desc": "Show random button in header",
@@ -104,18 +104,18 @@
     "panel_footer_close": "Press <kbd>?</kbd> or <kbd>Esc</kbd> to close",
     "panel_footer_release_notes": "{{icon:clipboard}} Release Notes",
     "panel_footer_contribute": "Contribute",
-    "jellyseerr_toast_filter_on": "{{icon:jellyfish}} Showing results only from Jellyseerr",
+    "jellyseerr_toast_filter_on": "{{icon:jellyfish}} Showing results only from Discovery",
     "jellyseerr_toast_filter_off": "{{icon:jellyfish}} Showing all search results",
-    "jellyseerr_results_title": "Jellyseerr Results",
-    "jellyseerr_discover_title": "Discover on Jellyseerr",
+    "jellyseerr_results_title": "Discover Results",
+    "jellyseerr_discover_title": "Discovery only",
     "jellyseerr_similar_title": "Similar",
     "jellyseerr_recommended_title": "Recommended",
-    "jellyseerr_icon_active_tooltip": "Jellyseerr is active\nDouble-click to show only Jellyseerr results",
-    "jellyseerr_icon_active_filter_tooltip": "Jellyseerr is active\nDouble-click to show all results",
-    "jellyseerr_icon_no_user_tooltip": "User not found on Jellyseerr",
-    "jellyseerr_icon_disabled_tooltip": "Jellyseerr is not connected.",
-    "jellyseerr_no_results_jellyfin": "Sorry! No results found for \"{query}\" on Jellyfin",
-    "jellyseerr_card_view_on_jellyseerr": "View on Jellyseerr",
+    "jellyseerr_icon_active_tooltip": "Discovery is active\nDouble-click to show only Discovery results",
+    "jellyseerr_icon_active_filter_tooltip": "Discovery is active\nDouble-click to show all results",
+    "jellyseerr_icon_no_user_tooltip": "User not found on Discovery",
+    "jellyseerr_icon_disabled_tooltip": "Discovery is not connected.",
+    "jellyseerr_no_results_jellyfin": "Sorry! No results found for \"{query}\" ",
+    "jellyseerr_card_view_on_jellyseerr": "View on Discovery",
     "jellyseerr_card_badge_movie": "Movie",
     "jellyseerr_card_badge_series": "Series",
     "jellyseerr_card_badge_collection": "Collection",
@@ -125,7 +125,7 @@
     "jellyseerr_btn_requested": "Requested",
     "jellyseerr_btn_error": "Error",
     "jellyseerr_btn_user_not_found": "User Not Found",
-    "jellyseerr_btn_offline": "Jellyseerr offline",
+    "jellyseerr_btn_offline": "Discovery offline",
     "jellyseerr_btn_pending": "Pending Approval",
     "jellyseerr_btn_request_more": "Request More",
     "jellyseerr_btn_view_status": "View Status",
@@ -218,7 +218,7 @@
     "jellyseerr_report_issue_button": "Report issue",
     "jellyseerr_report_unavailable_button": "Reporting Unavailable",
     "jellyseerr_report_unavailable_toast": "Reporting is unavailable for this item (no TMDB match)",
-    "jellyseerr_report_issue_title": "Report Issue to Jellyseerr",
+    "jellyseerr_report_issue_title": "Report Issue",
     "jellyseerr_report_issue_type": "Issue Type",
     "jellyseerr_report_issue_type_video": "Video",
     "jellyseerr_report_issue_type_audio": "Audio",
@@ -262,7 +262,7 @@
     "reviews_read_less": "Read Less",
     "panel_settings_language": "Language Settings",
     "panel_settings_language_display": "Display Language",
-    "panel_settings_language_display_desc": "Select the language for Jellyfin Enhanced interface. Changes take effect after page refresh.",
+    "panel_settings_language_display_desc": "Select the language for Netflix Enhanced interface. Changes take effect after page refresh.",
     "panel_settings_language_clear_cache": "Clear Translation Cache",
     "panel_settings_language_clear_cache_desc": "Removes all cached translations. Useful to fetch a recently updated translation from Github.",
     "toast_language_changed": "{{icon:language}} Language changed! Refreshing page...",
